--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "@tensorflow/tfjs-node": "^4.2.0",
+    "@types/yargs": "^17.0.22",
     "consola": "^2.15.3",
     "lodash": "^4.17.21",
-    "progress": "^2.0.3"
+    "progress": "^2.0.3",
+    "yargs": "^17.7.1"
   }
 }
